extracted core